--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,9 +1,27 @@
 {
-    "name": "@easy-kit/i18n",
-    "version": "2.4.0",
-    "description": "> TODO: description",
-    "author": "赵振华 <topjquery@qq.com>",
-    "homepage": "",
+    "name": "@easykit/i18n",
+    "version": "0.0.1",
+    "description": "Easy Kit internationalization",
+    "author": "Grant <284885069@qq.com>",
+    "homepage": "https://github.com/zkit-org",
     "license": "MIT",
-    "type": "module"
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/zkit-org/packages.git"
+    },
+    "type": "module",
+    "scripts": {
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    },
+    "files": [
+        "dist",
+        "README.md"
+    ],
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js"
+        }
+    }
 }
