--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -23,5 +23,8 @@
         ".": {
             "import": "./dist/index.js"
         }
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
